servicey/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicey
  namespace: servicey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicey
  template:
    metadata:
      labels:
        app: servicey
    spec:
      containers:
      - name: servicey
        image: 4719/s2s:v1
        ports:
        - containerPort: 8080
