servicey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicey
  namespace: servicey
spec:
  selector:
    app: servicey
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
