servicey/jwt-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: servicey-jwt
  namespace: servicey
spec:
  selector:
    matchLabels:
      app: servicey
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json"


---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: servicey-jwt-policy
  namespace: servicey
spec:
  selector:
    matchLabels:
      app: servicey
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
